Bug 498774 - Almost all hotkeys do not work and memorizing the last playback position does not work.
Summary: Almost all hotkeys do not work and memorizing the last playback position does...
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.3.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
: 498832 498893 498965 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-01-17 05:01 UTC by Konstantin
Modified: 2025-01-21 16:31 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Konstantin 2025-01-17 05:01:47 UTC
Almost all hotkeys do not work and memorizing the last playback position does not work.
After the update, the keyboard shortcuts stopped working and playback from the place where you finished watching does not work. A file with the viewing parameters and the location to which it was viewed is being created, but the video still opens from the very beginning.
Pausing on the space bar and rewinding the video using the arrows and some other keys does not work.

UPD. Some of the functionality of the program does not work at all.

haruna 1.3.0-1
Operating System: Arch Linux
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.12.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 32 × Intel® Core™ i9-14900KF
Memory: 62.6 ГиБ of RAM
Graphics Processor: NVIDIA GeForce RTX 4080/PCIe/SSE2
Manufacturer: ASUS
Comment 1 Antonio Rojas 2025-01-18 07:53:15 UTC
*** Bug 498832 has been marked as a duplicate of this bug. ***
Comment 2 Antonio Rojas 2025-01-19 18:09:18 UTC
*** Bug 498893 has been marked as a duplicate of this bug. ***
Comment 3 george fb 2025-01-20 03:15:46 UTC
Can't reproduce. Tried openSUSE TW and EndeavourOS.
Comment 4 george fb 2025-01-20 07:31:22 UTC
Regarding the playback position check your settings.
Comment 5 Konstantin 2025-01-21 11:11:21 UTC
(In reply to george fb from comment #4)
> Regarding the playback position check your settings.

Naturally, I checked everything and even deleted the settings folder. It still doesn't work in the new version 1.3.1. It does not remember the location and keyboard shortcuts do not work.

I also noticed that the settings from version 1.2.1 and below work strangely with settings 1.3.0 and above.
Comment 6 Konstantin 2025-01-21 11:16:27 UTC
(In reply to george fb from comment #4)
> Regarding the playback position check your settings.

Delete all folders with Haruna settings and try to configure it. Nothing is working. If you use the settings saved by version 1.2.1 later in version 1.3 and higher, the strange thing is that version 1.3 has fewer bugs. Apparently they save the settings differently.

But if you delete all the folders with settings and install version 1.3.1 or 1.3, it still doesn't work.
Comment 7 george fb 2025-01-21 11:48:59 UTC
Git commit cc6fb289ae505fc78bf54ede03bb12c514022f94 by George Florea Bănuș.
Committed on 21/01/2025 at 11:45.
Pushed by georgefb into branch 'master'.

mpvitem: replace old SeekToLastPosition with RestoreFilePosition
playbacksettings: remove unused entry

M  +1    -1    src/mpv/mpvitem.cpp
M  +0    -3    src/settings/playbacksettings.kcfg

https://invent.kde.org/multimedia/haruna/-/commit/cc6fb289ae505fc78bf54ede03bb12c514022f94
Comment 8 george fb 2025-01-21 12:35:29 UTC
Git commit 200175c3e528b893d2a957961d6801d4d3c74246 by George Florea Bănuș.
Committed on 21/01/2025 at 12:34.
Pushed by georgefb into branch 'master'.

actionsmodel: fix shortcuts not working with non english system language

M  +2    -2    src/models/actionsmodel.cpp

https://invent.kde.org/multimedia/haruna/-/commit/200175c3e528b893d2a957961d6801d4d3c74246
Comment 9 Antonio Rojas 2025-01-21 14:33:45 UTC
*** Bug 498965 has been marked as a duplicate of this bug. ***
Comment 10 jacky_009 2025-01-21 15:50:40 UTC
(In reply to george fb from comment #8)
> Git commit 200175c3e528b893d2a957961d6801d4d3c74246 by George Florea Bănuș.
> Committed on 21/01/2025 at 12:34.
> Pushed by georgefb into branch 'master'.
> 
> actionsmodel: fix shortcuts not working with non english system language
> 
> M  +2    -2    src/models/actionsmodel.cpp
> 
> https://invent.kde.org/multimedia/haruna/-/commit/
> 200175c3e528b893d2a957961d6801d4d3c74246

Can confirm. On german system the bug still exist with v1.3.1

Operating System: EndeavourOS 
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.6.72-1-lts (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Xeon® CPU E3-1280 v3 @ 3.60GHz
Memory: 23.4 GiB of RAM
Graphics Processor: AMD Radeon RX 570 Series
Manufacturer: ASUS
Product Name: All Series
Comment 11 george fb 2025-01-21 15:54:50 UTC
(In reply to jacky_009 from comment #10)
> (In reply to george fb from comment #8)
> > Git commit 200175c3e528b893d2a957961d6801d4d3c74246 by George Florea Bănuș.
> > Committed on 21/01/2025 at 12:34.
> > Pushed by georgefb into branch 'master'.
> > 
> > actionsmodel: fix shortcuts not working with non english system language
> > 
> > M  +2    -2    src/models/actionsmodel.cpp
> > 
> > https://invent.kde.org/multimedia/haruna/-/commit/
> > 200175c3e528b893d2a957961d6801d4d3c74246
> 
> Can confirm. 
Confirm what? 

> On german system the bug still exist with v1.3.1
And that's what the commit you replied to fixes.

Have you compiled the latest (master) version and you still have the problem?
Comment 12 jacky_009 2025-01-21 15:58:51 UTC
I use this version.

https://archlinux.org/packages/extra/x86_64/haruna/

v1.3.1 is used there. If the bug is only dealt with in a later revision. Then no.

Then I have to wait until v1.3.2 is out for testing.
Comment 13 jacky_009 2025-01-21 16:31:04 UTC
(In reply to george fb from comment #11)
> (In reply to jacky_009 from comment #10)
> > (In reply to george fb from comment #8)
> > > Git commit 200175c3e528b893d2a957961d6801d4d3c74246 by George Florea Bănuș.
> > > Committed on 21/01/2025 at 12:34.
> > > Pushed by georgefb into branch 'master'.
> > > 
> > > actionsmodel: fix shortcuts not working with non english system language
> > > 
> > > M  +2    -2    src/models/actionsmodel.cpp
> > > 
> > > https://invent.kde.org/multimedia/haruna/-/commit/
> > > 200175c3e528b893d2a957961d6801d4d3c74246
> > 
> > Can confirm. 
> Confirm what? 
> 
> > On german system the bug still exist with v1.3.1
> And that's what the commit you replied to fixes.
> 
> Have you compiled the latest (master) version and you still have the problem?

I've compiled it not from github. 

Can confirm, i'ts fixed on my german system.

Sorry, I've misunderstood something.