actionsmodel: fix shortcuts not working with non english system language

BUG: 498774